src/components/Page/Page.css
/* Base styles */
body, html {
  width: 100%;
  height: 100%;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
}

.page-content{
  top:0px;
  width: 100%;
  height: 100%;
  overflow-y: auto;
  overflow-x: hidden;
}



.hero-container {
  z-index: 2;
  width: 100%; /* Full width of the viewport */
  height: 55%; /* Height relative to the viewport width */
  overflow: hidden; 
  display: block; 
  position: relative; /* Position relative to allow child elements to be positioned inside */
}

.hero-container img {
  width: 100%; 
  height: 100%; 
  object-fit: cover; /* Ensures the image fills the container while maintaining aspect ratio */
  object-position: center left; /* Focus on the bottom of the image */
  
}

.container{
  display: flex;
  width: 100%;  /* Full viewport height */
  overflow: hidden;
  box-sizing: border-box;  /* Ensure padding and borders are included in the element's width and height */
  padding-right:  20px; /* Add padding inside the container */
  padding-left: 20px ;
  margin-top: -25px;
  gap: 20px; /* Space between child elements */
  position: relative; 
  z-index: 10; 
  margin-bottom: 50px;
  position: relative; /* Necessary to define the context for the sticky child */
  flex-wrap: nowrap;


}

.fulldescription-subcontainer{
 flex: 0 0 75%; /* Takes 70% of the width */
 background-color: #fff;
 border-radius: 10px;
 box-sizing: border-box; /* Ensure padding and border don't increase the total width */
 flex-direction: column; /* Children will be stacked vertically */
 padding: 20px; 
}

.annex-subcontainer{

  flex: 0 0 20%; /* Takes 70% of the width */
  height: 50%;
  background-color: #fff;
  border-radius: 10px;
  padding: 10px;
  backdrop-filter: blur(10px);
}



@media (max-width: 768px) {
  .container {
    flex-direction: column; /* Stack elements vertically */
  }

  .fulldescription-subcontainer, 
  .annex-subcontainer {
    flex: 0 0 100%; /* Full width on mobile */
    height: auto; /* Adjust height automatically */
    margin-bottom: 20px; /* Add spacing between stacked items */
  }
}

.chip {
  border: 1px solid;
  padding: 4px 8px !important;           /* Reduced padding for smaller chips */
  border-radius: 12px !important;        /* Rounded corners for pill-shaped look */
  font-size: 0.7em !important;           /* Smaller font size */
  display: inline-block !important;
  white-space: nowrap !important;        /* Prevent text wrapping */
  background-color: white !important; 
}

.media {
  
  background-color: #ddd;
}


.title-overlay-sticky {
  position: sticky;
  top: 0;
  background-color: #fff;
  z-index: 9990;
  padding: 20px;
  
}

.first-row{
  display: flex;
  align-items: center; /* Align items vertically in the center */
  justify-content: space-between; /* Space out the button and title */
}

.title-role-container {
  display: flex; 
  align-items: baseline; /* Align title and role on their text baseline */
  gap: 10px; /* Space between title and role */
}

#overlay-title {
  font-size: 1.5rem; 
  font-weight: bold;
  margin: 0; /* Remove default margins */
  line-height: 1; /* Ensures no extra vertical space is added */
}

#category-role {
  font-size: 1rem; 
  margin: 0; /* Remove default margins */
  color: #555;
  line-height: 1; /* Ensures no extra vertical space is added */
}

.overlay-container {
  display: flex;
  gap: 30px;
  padding: 30px;
}

.category-paragraph {
  margin-bottom: 15px;
}


.category-content {
  font-size: 0.9em;
}

.close-button {
  position: absolute;
  top: 20px;
  right: 20px;
  width: 30px; 
  aspect-ratio: 1 / 1; /* Maintains 1:1 ratio */
  background: #e74c3c; 
  color: white; 
  font-size: 24px; 
  border: none; 
  border-radius: 50%; 
  display: flex; 
  justify-content: center; 
  align-items: center; 
  cursor: pointer; 
  transition: transform 0.3s ease, background 0.3s ease; 
}

.close-button:hover {
  background: #c0392b; /* Change to a darker shade of red on hover */
  transform: scale(1.2); /* Scale the button up */
}

.close-button:focus {
  outline: none; /* Remove the default focus outline */
}


.chip-container {
  display: flex;
  flex-wrap: wrap;   /* Ensure chips wrap if they don't fit in one line */
  gap: 10px;         /* Add space between each chip */
  margin-top: 10px;  /* Space between chips and other content */
  z-index: 20;       /* Ensure the chip container is on top */
}

